--- a/src/style/main.css
+++ b/src/style/main.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Karla', 'Roboto', sans-serif;
     font-weight: 400;
-    background-color: #f5f5f5;
+    background-color: #d3d3d3;
     color: #333;
     line-height: 1.6;
     display: flex;
